# xarray_leaflet

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml  ui-tests.yml  update_galata_references.yml
binder/: environment.yml  postBuild
docs/: Makefile  conf.py  getting_started.rst  index.rst  installation.rst  make.bat  usage.rst
etc/jupyter/jupyter_notebook_config.d/: xarray_leaflet.json
etc/jupyter/jupyter_server_config.d/: xarray_leaflet.json
etc/jupyter/nbconfig/notebook.d/: xarray_leaflet.json
examples/: custom_projection.ipynb  dynamic.ipynb  introduction.ipynb  markers_or_density.ipynb  vector.ipynb  vector_points.ipynb
jupyter_server/: LICENSE  README.md  pyproject.toml
jupyter_server/etc/jupyter/jupyter_notebook_config.d/: jupyter_server_xarray_leaflet.json
jupyter_server/etc/jupyter/jupyter_server_config.d/: jupyter_server_xarray_leaflet.json
jupyter_server/jupyter_server_xarray_leaflet/: __init__.py  server_extension.py
tests/: test_vector.py  utils.py
ui-tests/: jupyter_server_config.py  package.json  playwright.config.js
ui-tests/notebooks/: test0.ipynb  test_raster.ipynb  test_vector.ipynb
ui-tests/tests/: xarray-leaflet.test.ts
xarray_leaflet/: __init__.py  handler.py  server_extension.py  transform.py  utils.py  vector.py  xarray_leaflet.py
xarray_leaflet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xarray_leaflet/.ipynb_checkpoints/: xarray_leaflet-checkpoint.py
