[metadata]
name = xarray_leaflet
version = attr: xarray_leaflet.__version__
description = An xarray extension for map plotting
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/xarray-contrib/xarray_leaflet
platforms = Windows, Linux, Mac OS X
keywords = xarray leaflet

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  jupyter_server >=0.2.0
  rioxarray >=0.0.30
  ipyleaflet >=0.13.1
  ipywidgets >=7.7.2
  pillow >=7
  matplotlib >=3
  affine >=2
  mercantile >=1
  ipyspin >=0.1.6
  ipyurl >=0.1.3
  geocube <1.0.0
  pygeos >=0.12,<1.0.0
  zarr >=2.0.0,<3.0.0

[options.extras_require]
test =
  mypy
  flake8
  black
  isort
  pytest

[options.data_files]
etc/jupyter/jupyter_server_config.d = etc/jupyter/jupyter_server_config.d/xarray_leaflet.json
etc/jupyter/jupyter_notebook_config.d = etc/jupyter/jupyter_notebook_config.d/xarray_leaflet.json

[flake8]
max-line-length = 100
